# breadwallet-core

./: .gitignore  .gitmodules  BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRBloomFilter.c  BRBloomFilter.h  BRChainParams.h  BRCore.h  BRCrypto.c  BRCrypto.h  BRHash.c  BRHash.h  BRInt.h  BRKey.c  BRKey.h  BRKeyECIES.c  BRKeyECIES.h  BRList.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRRWLock.h  BRSet.c  (+19 more)
Java/Core/: .gitignore  CMakeLists.txt  build.gradle
Java/Core/src/androidTest/java/com/breadwallet/core/: BRCoreTestTest.java  BRCoreWalletTest.java  BaseAIT.java  CoreExampleInstrumentedTest.java  CoreLibraryLoad.java  ExampleInstrumentedTest.java
Java/Core/src/androidTest/java/com/breadwallet/core/bitcoin/: MasterPublicKeyAIT.java  WalletAIT.java
Java/Core/src/androidTest/java/com/breadwallet/core/ethereum/: AccountAIT.java  ClientAIT.java  TokenAIT.java  TokensAIT.java  WalletAIT.java  WalletManagerAIT.java
Java/Core/src/main/: AndroidManifest.xml
Java/Core/src/main/cpp/: core  native-lib.cpp
Java/Core/src/main/cpp/jni/: BRCoreJni.c  BRCoreJni.h  com_breadwallet_core_BRCoreAddress.c  com_breadwallet_core_BRCoreChainParams.c  com_breadwallet_core_BRCoreJniReference.c  com_breadwallet_core_BRCoreKey.c  com_breadwallet_core_BRCoreKey.h  com_breadwallet_core_BRCoreMasterPubKey.c  com_breadwallet_core_BRCoreMerkleBlock.c  com_breadwallet_core_BRCorePaymentProtocol.c  com_breadwallet_core_BRCorePaymentProtocol.h  com_breadwallet_core_BRCorePeer.c  com_breadwallet_core_BRCorePeerManager.c  com_breadwallet_core_BRCorePeerManager.h  com_breadwallet_core_BRCoreTest.c  com_breadwallet_core_BRCoreTest.h  com_breadwallet_core_BRCoreTransaction.c  com_breadwallet_core_BRCoreTransactionInput.c  com_breadwallet_core_BRCoreTransactionInput.h  com_breadwallet_core_BRCoreTransactionOutput.c  com_breadwallet_core_BRCoreWallet.c  com_breadwallet_core_BRCoreWallet.h
Java/Core/src/main/cpp/jni/ethereum/: Makefile  com_breadwallet_core_ethereum_BREthereumEWM.c  com_breadwallet_core_ethereum_BREthereumEWM.h  com_breadwallet_core_ethereum_BREthereumNetwork.c  com_breadwallet_core_ethereum_BREthereumToken.c  com_breadwallet_core_ethereum_BREthereumToken.h  com_breadwallet_core_ethereum_BREthereumTransfer.h
Java/Core/src/main/java/com/breadwallet/core/: BRCoreAddress.java  BRCoreChainParams.java  BRCoreJniReference.java  BRCoreKey.java  BRCoreMasterPubKey.java  BRCoreMerkleBlock.java  BRCorePaymentProtocolACK.java  BRCorePaymentProtocolEncryptedMessage.java  BRCorePaymentProtocolInvoiceRequest.java  BRCorePaymentProtocolMessage.java  BRCorePaymentProtocolPayment.java  BRCorePaymentProtocolRequest.java  BRCorePeer.java  BRCorePeerManager.java  BRCoreTest.java  BRCoreTransaction.java  BRCoreTransactionInput.java  BRCoreTransactionOutput.java  BRCoreWallet.java  BRCoreWalletManager.java
Java/Core/src/main/java/com/breadwallet/core/ethereum/: BREthereumAccount.java  BREthereumAmount.java  BREthereumBlock.java  BREthereumEWM.java  BREthereumNetwork.java  BREthereumToken.java  BREthereumTransaction.java  BREthereumTransfer.java  BREthereumWallet.java
Java/Core/src/test/java/com/breadwallet/core/: BRWalletManager.java
Java/CoreNative/: .gitignore  CMakeLists.txt  build.gradle
Java/CoreNative/src/androidTest/: AndroidManifest.xml
Java/CoreNative/src/androidTest/java/com/breadwallet/corenative/: CryptoLibraryAIT.java
Java/CoreNative/src/androidTest/resources/lib/x86_64/: wrap.sh
Java/CoreNative/src/commonTest/java/com/breadwallet/corenative/: CryptoLibraryIT.java
Java/CoreNative/src/main/java/com/breadwallet/corenative/: CryptoLibrary.java  CryptoLibraryDirect.java  CryptoLibraryIndirect.java
Java/CoreNative/src/main/java/com/breadwallet/corenative/bitcoin/: BRChainParams.java  BRTransaction.java  BRTransactionEvent.java  BRTransactionEventType.java  BRTxInput.java  BRTxOutput.java  BRWallet.java  BRWalletEvent.java  BRWalletEventType.java  BRWalletManager.java  BRWalletManagerClient.java  BRWalletManagerEvent.java  BRWalletManagerEventType.java  CoreBRTransaction.java  CoreBRWalletManager.java  OwnedBRTransaction.java  OwnedBRWalletManager.java
Java/CoreNative/src/main/java/com/breadwallet/corenative/cleaner/: Reference.java  ReferenceCleaner.java  ReferenceDaemon.java  TrackedReference.java
Java/CoreNative/src/main/java/com/breadwallet/corenative/crypto/: BRCryptoAccount.java  BRCryptoAddress.java  BRCryptoAddressScheme.java  BRCryptoAmount.java  BRCryptoBlockChainType.java  BRCryptoBoolean.java  BRCryptoCWMClient.java  BRCryptoCWMClientBtc.java  BRCryptoCWMClientCallbackState.java  BRCryptoCWMClientEth.java  BRCryptoCWMClientGen.java  BRCryptoCWMCompletionState.java  BRCryptoCWMListener.java  BRCryptoCallbackHandle.java  BRCryptoCipher.java  BRCryptoClient.java  BRCryptoClientCallbackState.java  BRCryptoCoder.java  BRCryptoComparison.java  BRCryptoCurrency.java  BRCryptoFeeBasis.java  BRCryptoHash.java  BRCryptoHasher.java  BRCryptoKey.java  BRCryptoNetwork.java  BRCryptoNetworkCanonicalType.java  BRCryptoNetworkFee.java  BRCryptoPayProtReqBitPayAndBip70Callbacks.java  BRCryptoPaymentProtocolPaymentAck.java  BRCryptoPaymentProtocolRequest.java  BRCryptoPaymentProtocolRequestBitPayBuilder.java  BRCryptoPaymentProtocolType.java  BRCryptoPeer.java  BRCryptoSigner.java  BRCryptoStatus.java  BRCryptoSyncDepth.java  BRCryptoSyncMode.java  BRCryptoSyncStoppedReason.java  BRCryptoSyncStoppedReasonType.java  BRCryptoTransfer.java  (+53 more)
Java/CoreNative/src/main/java/com/breadwallet/corenative/ethereum/: BREthereumAddress.java  (+8 more)
Java/CoreNative/src/main/res/values/: strings.xml
Java/corenative/: CMakeLists.txt  build.gradle
Java/corenative/src/commonTest/java/com/breadwallet/corenative/: CryptoLibraryIT.java
Java/corenative/src/main/java/com/breadwallet/corenative/: CryptoLibrary.java  CryptoLibraryDirect.java  CryptoLibraryIndirect.java
(+1598 files in other folders)
